--- a/kikar_hamedina/static/css/he/main-he.css
+++ b/kikar_hamedina/static/css/he/main-he.css
@@ -175,8 +175,25 @@ body {
 }
 
 .parties__party-img {
-  flex-basis: 150px;
+  -webkit-align-self: center;
+      -ms-flex-item-align: center;
+          align-self: center;
+  -webkit-flex-basis: 150px;
+      -ms-flex-preferred-size: 150px;
+          flex-basis: 150px;
 }
+
+/* Shame */
+/* Fixes Shas SVG */
+.parties__party-container a[href="/party/36"] {
+  display: flex;
+  justify-content: center;
+}
+
+.parties__party-container a[href="/party/36"] img {
+  height: 50px;
+}
+/* End Shame */
 
 /* Party's Members Page */
 
